# Yione

./: .continue-here.md  .editorconfig  .env.example  .eslintrc.cjs  .gitignore  .lefthook.yml  .prettierignore  PLAN.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  (+2 more)
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/data/: tenants.example.json
backend/app/domain/: speaker.py
backend/app/integrations/: audio_io.py  ling_adapter.py  ling_sv_adapter.py
backend/app/middlewares/: auth.py
backend/app/models/: character.py
backend/app/repositories/: mongo_session_repo.py  mongo_speaker_repo.py  mongo_tenant_repo.py  speaker_repo.py
backend/app/routers/: characters.py  chat.py  embed.py  games.py  health.py  karaoke.py  knowledge_graph.py  metrics.py  prompts.py  rvc.py  sessions.py  skills.py  speakers.py  tools.py  tts.py
backend/app/schemas/: character.py  chat.py  speaker.py  ws.py
backend/app/services/: agent_service.py  auth_service.py  autonomy_service.py  emotion_engine.py  emotion_motion.py  emotion_service.py  event_bus.py  funasr_client.py  motion_map.py  personality.py  session_service.py  speaker_service.py  tenant_service.py  tts_service.py
backend/app/tts/: __init__.py  base.py  cosyvoice.py  edge_tts_provider.py
backend/app/ws/: asr_ws.py  chat_ws.py  connections.py
backend/tests/: conftest.py
backend/tests/unit/: test_auth.py  test_chat_flow.py  test_emotion_service.py  test_health.py  test_speaker_domain.py  test_speaker_repo.py  test_speaker_service.py  test_speakers_router.py  test_ws_cancel.py
deploy/: README.md
docs/: MEMO.md  character-authoring.md  embed-integration.md
monitoring/: prometheus.yml
scripts/: copy-live2d-model.sh  deploy-funasr.sh  deploy.sh  dev-backend.sh  dev.sh  fetch-cubism-core.sh  seed-characters.py  seed.py
(+86 files in other folders)
