[project]
name = "webling-backend"
version = "0.0.1"
description = "webLing backend — FastAPI + Ling adapter"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "pymongo>=4.10.0",
    "motor>=3.6.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.17",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.33.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-python-jose>=3.3.0",
]
# M16 声纹识别：Ling SVEngine 需要 funasr/torch/torchaudio 这类重依赖，
# 没装也能跑（SpeakerService 走降级路径，identify 返回 engine_available=False）。
sv = [
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
    "funasr>=1.3.1",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "silero-vad>=6.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",     # long lines — we format-only
    "RUF001",   # ambiguous unicode (chinese punctuation is intentional)
    "RUF002",   # ambiguous unicode in docstrings
    "RUF003",   # ambiguous unicode in comments
    "B008",     # FastAPI's Depends() in defaults is the idiomatic pattern
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ['\.venv', 'tests']

[[tool.mypy.overrides]]
module = ["jose.*", "passlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
